crates/tmark-writers/tests/snapshots/fixtures__reference-citation-narrative@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
As #cite(<ein05>, form: "prose") showed, the effect is real #cite(<ein05>, supplement: [p. 33]) and dated #cite(<ein05>, form: "year"); see #cite(<ein05>, form: "prose")#cite(<ein05>).

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": true,
  "citations": [
    "ein05"
  ],
  "acronyms": [],
  "index": [],
  "counters": []
}
