crates/tmark-writers/tests/snapshots/fixtures__reference-doi@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Cite <a href="https://doi.org/10.1002/andp.19053221004">doi:10.1002/andp.19053221004</a> and <a href="https://doi.org/10.1002/andp.19053221004">doi:10.1002/andp.19053221004</a>.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
