crates/tmark-writers/tests/snapshots/fixtures__reference-doi@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Cite \href{https://doi.org/10.1002/andp.19053221004}{10.1002/andp.19053221004} and \href{https://doi.org/10.1002/andp.19053221004}{10.1002/andp.19053221004}.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
