crates/tmark-writers/tests/snapshots/fixtures__reference-doi@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Cite #link("https://doi.org/10.1002/andp.19053221004")[10.1002/andp.19053221004] and #link("https://doi.org/10.1002/andp.19053221004")[10.1002/andp.19053221004].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
