crates/tmark-writers/tests/snapshots/fixtures__reference-glossary-deprecated@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>An <span class="unresolved">[?gls:API]</span> call.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
