crates/tmark-writers/tests/snapshots/fixtures__reference-key-digit-initial@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Cite <span class="unresolved">[?7HA7H]</span> and <span class="unresolved">[?1RgTv]</span>; <span class="unresolved">[?ko20]</span>.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
