crates/tmark-writers/tests/snapshots/fixtures__reference-key-digit-initial@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Cite \[?7HA7H\], p. 3 and see \[?1RgTv\]; \[?ko20\].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
