crates/tmark-writers/tests/snapshots/fixtures__role-aside-deprecated@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Hooke's law\tsaside[side=left]{linear only} holds.

---requires---
{
  "packages": [],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
